# flight_code

./: .gitignore  Cargo.toml  Embed.toml  LICENSE  README.md  openocd.gdb
.cargo/: config
src/: fc.rs  hardware.rs  idle_loop.rs  ipc.rs  led.rs  main.rs  motors.rs  position.rs  serial.rs
src/fc/: mod.rs  pid.rs
