[package]
authors = ["knoby <maximilian.brinkmann@gmx.net>"]
edition = "2018"
readme = "README.md"
name = "flight_code"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.2"
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
nb = "0.1.2"
heapless = "0.5.2"
lsm303dlhc = "0.2.0"
l3gd20 = "0.2.0"
cortex-m-semihosting = "0.3.5"

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.rc_framing]
path = "../rc_framing"

[dependencies.copter_defs]
path =  "../copter_defs"

[dependencies.nalgebra]
default-features = false
version = "0.19.0"

[dependencies.alt-stm32f30x-hal]
path = "../alt-stm32f30x-hal"
features = ["rt", "stm32f303"]

[dependencies.cortex-m-rtfm]
version = "0.5.1"

