[package]
authors = ["knoby <maximilian.brinkmann@gmx.net>"]
edition = "2018"
name = "flight_code"
readme = "README.md"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.3"
cortex-m-semihosting = "0.3.5"
heapless = "0.5.6"
l3gd20 = "0.3.0"
lsm303dlhc = "0.2.0"
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"

[dependencies.num-traits]
default-features = false
version = "0.2"

[dependencies.copter_defs]
features = ["no_std"]
path = "../copter_defs"

[dependencies.rc_framing]
path = "../rc_framing"

[dependencies.nalgebra]
default-features = false
features = ["libm"]
version = "0.22.0"

[dependencies.stm32f3xx-hal]
features = ["stm32f303xc", "rt"]
version = "0.5.0"

[dependencies.cortex-m-rtic]
version = "0.5.5"

[dependencies.rtt-target]
features = ["cortex-m"]
version = "0.2.2"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
