[package]
authors = ["knoby <maximilian.brinkmann@gmx.net>"]
edition = "2018"
name = "flight_code"
readme = "README.md"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.3"
defmt = "0.1.0"
defmt-rtt = "0.1.0"
heapless = "0.5.6"
l3gd20 = "0.3.0"
lsm303dlhc = "0.2.0"
nb = "1.0.0"
panic-probe = {version = "0.1.0", features = ["print-defmt"]}

[dependencies.num-traits]
default-features = false
version = "0.2"

[dependencies.copter_com]
features = ["no_std"]
path = "../copter_com"

[dependencies.nalgebra]
default-features = false
features = ["libm"]
version = "0.23.0"

[dependencies.stm32f3xx-hal]
features = ["stm32f303xc", "rt"]
version = "0.5.0"

[dependencies.cortex-m-rtic]
version = "0.5.5"

[features]
# set logging levels here
default = [
  "defmt-default",
]
defmt-debug = []
defmt-default = []
defmt-error = []
defmt-info = []
defmt-trace = []
defmt-warn = []
serial_usb = []

[profile.dev]
codegen-units = 1 
debug = 2 
debug-assertions = true # <-
incremental = false 
opt-level = 3 # <-
overflow-checks = true # <-

[profile.release]
codegen-units = 1 
debug = 2 
debug-assertions = false # <-
incremental = false 
lto = 'fat' 
opt-level = 3 # <-
overflow-checks = false # <-

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
